RESOLVED FIXED267333
[WGSL] shader,execution,expression,call,builtin,bitcast:* is failing
https://bugs.webkit.org/show_bug.cgi?id=267333
Summary [WGSL] shader,execution,expression,call,builtin,bitcast:* is failing
Tadeu Zagallo
Reported 2024-01-10 07:08:43 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-10 07:08:53 PST
Tadeu Zagallo
Comment 2 2024-01-10 07:12:42 PST
EWS
Comment 3 2024-01-10 23:35:08 PST
Committed 272893@main (42abab73c918): <https://commits.webkit.org/272893@main> Reviewed commits have been landed. Closing PR #22582 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.