[WGSL] shader,execution,expression,call,builtin,bitcast:* is failing https://bugs.webkit.org/show_bug.cgi?id=267333 rdar://120783284

Reviewed by Mike Wyrzykowski.

The constant implementation of bitcast reused the `convertValue` helper, which used
static_cast to convert between types. Allow passing different casts to convertValue
and use bitwise_cast instead.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::StaticCast::cast):
(WGSL::BitwiseCast::cast):
(WGSL::convertValue):
(WGSL::CONSTANT_FUNCTION):

Canonical link: https://commits.webkit.org/272893@main